--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
     "antd": "^4.23.2",
     "axios": "^0.27.2",
     "dotenv": "^16.0.2",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-jwt": "^1.1.7",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
