--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,9 @@
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.1.6",
     "@nestjs/swagger": "^6.1.2",
+    "@nestjs/websockets": "^9.1.6",
     "aws-sdk": "^2.1244.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
