--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,13 @@
     "dotenv": "^16.0.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
+    "rc-virtual-list": "^3.4.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jwt": "^1.1.7",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.5.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
