--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.5.3",
+    "typeface-josefin-sans": "^1.1.13",
+    "typeface-roboto": "^1.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
