--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "@nestjs/platform-socket.io": "^9.1.6",
     "@nestjs/swagger": "^6.1.2",
     "@nestjs/websockets": "^9.1.6",
+    "@sendgrid/mail": "^7.7.0",
     "aws-sdk": "^2.1244.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
