--- a/backend/.env
+++ b/backend/.env
@@ -25,3 +25,8 @@ DEFAULT_ADMIN_PASSWORD=123456
 S3_ACCESS_KEY_ID=AKIAQIQFNP7R7VHXOXYO
 S3_SECRET_ACCESS_KEY=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
 Bucket_Name=imagepublichou
+
+SENDGRID_API_KEY=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
+
+username=giangdv@vmodev.com
+password=dovangiang260120
