--- a/backend/.env
+++ b/backend/.env
@@ -15,7 +15,7 @@ CACHE_URI=<CACHE_URI>
 
 SES_ACCESS_KEY=
 SES_SECRET_KEY=
-SES_SEND_FROM=
+SES_SEND_FROM=giangdv@vmodev.com
 SES_REGION=
 
 #ADMIN CONFIG
@@ -26,7 +26,6 @@ S3_ACCESS_KEY_ID=AKIAQIQFNP7R7VHXOXYO
 S3_SECRET_ACCESS_KEY=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
 Bucket_Name=imagepublichou
 
-SENDGRID_API_KEY=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
-
+SENDGRID_API_KEY=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
 username=giangdv@vmodev.com
 password=dovangiang260120
