--- a/backend/.env
+++ b/backend/.env
@@ -26,6 +26,6 @@ S3_ACCESS_KEY_ID=AKIAQIQFNP7R7VHXOXYO
 S3_SECRET_ACCESS_KEY=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
 Bucket_Name=imagepublichou
 
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=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
 username=giangdv@vmodev.com
 password=dovangiang260120
