--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "@nestjs/swagger": "^6.1.2",
     "@nestjs/websockets": "^9.1.6",
     "@sendgrid/mail": "^7.7.0",
+    "@types/nodemailer": "^6.4.6",
     "aws-sdk": "^2.1244.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
@@ -40,6 +41,7 @@
     "dotenv": "^16.0.2",
     "imgbb-uploader": "^1.5.0",
     "mongoose": "^6.6.1",
+    "nodemailer": "^6.8.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
