--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,13 @@
     "antd": "^4.23.2",
     "axios": "^0.27.2",
     "dotenv": "^16.0.2",
+    "draftjs-to-html": "^0.9.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "rc-virtual-list": "^3.4.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-jwt": "^1.1.7",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
