--- a/backend/.env
+++ b/backend/.env
@@ -29,3 +29,10 @@ Bucket_Name=imagepublichou
 SENDGRID_API_KEY=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
 username=giangdv@vmodev.com
 password=dovangiang260120
+
+CLIENT_ID_SEND_MAIL=846463612277-hf4jcudvts4f53ma8d3dlrtlh19pvrnv.apps.googleusercontent.com
+SECRET_MAIL=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
+
+REFRESH_ACCESS_TOKEN_MAIL=1//04c95x_eJWfPICgYIARAAGAQSNwF-L9IrPCuMjWkEw_HhMQHs7b5eP5t4Ny6HcMTwi_KZmTeRNNJrOZvDZx8YP9PaSftg7ktb064
+
+PASSWORD_APP=lpnupmihckkmtsbx
