--- a/backend/package.json
+++ b/backend/package.json
@@ -39,7 +39,9 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cloudmailin": "^0.0.3",
     "dotenv": "^16.0.2",
+    "google-auth-library": "^8.7.0",
     "imgbb-uploader": "^1.5.0",
     "mongoose": "^6.6.1",
     "nodemailer": "^6.8.0",
