--- a/backend/.env
+++ b/backend/.env
@@ -27,5 +27,8 @@ S3_SECRET_ACCESS_KEY=ZYlt/NGsBUioTyljfNv+M52l2XGhJ226AYQXGnUF
 Bucket_Name=imagepublichou
 
 SENDGRID_API_KEY=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
-username=giangdv@vmodev.com
-password=dovangiang260120
+username1=giangdv@vmodev.com
+password1=dovangiang260120
+
+ADMIN_MAIL=giangdv@vmodev.com
+PASSWORD=iapbeokyymjkjpqz
