--- a/backend/package.json
+++ b/backend/package.json
@@ -42,6 +42,7 @@
     "dotenv": "^16.0.2",
     "imgbb-uploader": "^1.5.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "mongoose": "^6.6.1",
     "nodemailer": "^6.8.0",
     "passport-jwt": "^4.0.0",
